# ollama-poc

./: .gitignore  .pre-commit-config.yaml  README.md  assist.sh  chat_client.py  main.py  ollama_chat_client.py  pyproject.toml  question.py
golang/: .golangci.yml  Makefile  go.mod  go.sum  main.go
golang/cmd/: ask.go  root.go
golang/input/: prompt.go
golang/wrapper/: ollama.go  ollama_test.go  prompt.go  prompt_test.go
scripts/lib/: README.md  bootstrap.sh
