[tool.poetry]
name = "ollama-poc"
version = "0.1.0"
description = "ollama tool to run llm on local machine"
authors = ["Raja Soundaramourty <rajasoun@icloud.com>"]
readme = "README.md"
packages = [{include = "ollama_poc"}]

[tool.poetry.dependencies]
python = "^3.11"
ollama = "^0.1.7"
prompt-toolkit = "^3.0.43"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
