[tool.poetry]
name = "llm-poc"
version = "0.1.0"
description = "llm client wrapper"
authors = ["Raja Soundaramourty <rajasoun@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ollama = "^0.1.7"
prompt-toolkit = "^3.0.43"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
